--- a/src/components/UserMaster/Post.css
+++ b/src/components/UserMaster/Post.css
@@ -1,59 +1,10 @@
-.form-inline {
-  display: table !important;
-  table-layout: fixed;
-  width: 100%;
-  align-items: center;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  font-size: 12px;
-}
-
-/* Style the input fields */
-.form-cell input {
-  display: table-cell !important;
-  align-items: middle;
-  margin: 10px 10px 10px 0;
-  padding: 10px;
-  background-color: whitesmoke;
-  border: 1px solid #ddd;
-  width: 90%;
-}
-
-.form-cell label {
-  margin: 5px 10px 5px 0;
-  display: table-cell;
-  align-items: center;
-}
-
-.form-cell {
-  display: table-cell;
-}
-
-/* Style the submit button */
-.form-btn {
-  display: flex;
-  align-items: center;
-  padding: 10px 20px;
-  margin: auto;
-  background-color: dodgerblue;
-  border: 1px solid #ddd;
+.thead-dark {
+  background-color: #ff4500;
   color: white;
 }
-
-.form-btn:hover {
-  background-color: royalblue;
+tbody {
+  text-align: center;
 }
-
-/* Add responsiveness - display the form controls vertically instead of horizontally on screens that are less than 800px wide */
-@media (max-width: 800px) {
-  .form-inline input {
-    margin: 10px 0;
-    display: table-cell;
-  }
-
-  .form-inline {
-    flex-direction: column;
-    align-items: stretch;
-    display: table;
-  }
+th {
+  text-align: center;
 }
